<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contain_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fuckermonkey.snackgame.ui.activity.MainActivity">

    <TextView
        android:id="@+id/score_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="score:0"/>

    <TextView
        android:id="@+id/speed_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_toRightOf="@id/score_view"
        android:text="speed:1"/>

    <fuckermonkey.snackgame.ui.view.GridView
        android:id="@+id/grid_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:layout_below="@+id/score_view"/>

    <fuckermonkey.snackgame.ui.view.GameView
        android:id="@+id/game_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score_view"/>

    <!--<View-->
    <!--android:id="@+id/bg_view"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="350dp"-->
    <!--android:background="@color/colorAccent"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/play_btn"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/play"/>

        <Button
            android:id="@+id/level_btn"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play_btn"
            android:text="@string/level"/>

        <Button
            android:id="@+id/stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:enabled="false"
            android:text="@string/stop"/>

        <Button
            android:id="@+id/faster_btn"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/stop_btn"
            android:text="@string/faster"/>

        <Button
            android:id="@+id/slowly_btn"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/faster_btn"
            android:text="@string/slowly"/>

        <Button
            android:id="@+id/top_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/bottom_btn"
            android:text="↑"/>

        <Button
            android:id="@+id/bottom_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="↓"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/left_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/top_btn"
            android:layout_toLeftOf="@+id/top_btn"
            android:text="←"/>

        <Button
            android:id="@+id/right_btn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/top_btn"
            android:layout_toRightOf="@+id/top_btn"
            android:text="→"/>

        <Button
            android:id="@+id/setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/level_btn"
            android:text="@string/setting"/>

    </RelativeLayout>

</RelativeLayout>
